<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00ffffff">

    <TextView
            android:id="@+id/tv_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/tv_text"
            android:textSize="20dp"
            android:textColor="#444444"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/cb_isDeleteItem"
            tools:ignore="SpUsage"/>

    <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/iv_feel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/feel"/>

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/iv_weather"
            app:layout_constraintStart_toEndOf="@+id/iv_feel"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/weather"/>

    <TextView
            android:text="@string/tv_createdDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_createdDate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/cb_isDeleteItem"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:focusable="false"
            android:clickable="false"
            android:visibility="visible"
            android:buttonTint="#ff3333"
            android:scaleX="1.3"
            android:scaleY="1.3"/>

</android.support.constraint.ConstraintLayout>