<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/iv_feel_itemView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/feel"/>

    <TextView
            android:text="@string/feel"
            android:layout_width="100dp"
            android:textSize="15dp"
            android:textColor="#333333"
            android:layout_height="wrap_content"
            android:id="@+id/tv_feel_itemView"
            app:layout_constraintTop_toTopOf="@+id/iv_feel_itemView"
            app:layout_constraintBottom_toBottomOf="@+id/iv_feel_itemView"
            app:layout_constraintStart_toEndOf="@+id/iv_feel_itemView"
            android:layout_marginStart="8dp"
            tools:ignore="SpUsage"/>

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/iv_weather_itemView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_feel_itemView"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/weather"/>

    <TextView
            android:text="@string/weather"
            android:layout_width="100dp"
            android:textSize="15dp"
            android:textColor="#333333"
            android:layout_height="wrap_content"
            android:id="@+id/tv_weather_itemView"
            app:layout_constraintTop_toTopOf="@+id/iv_weather_itemView"
            app:layout_constraintBottom_toBottomOf="@+id/iv_weather_itemView"
            app:layout_constraintStart_toEndOf="@+id/iv_weather_itemView"
            android:layout_marginStart="8dp"
            tools:ignore="SpUsage"/>

    <TextView
            android:text="@string/content"
            android:layout_width="0dp"
            android:layout_height="217dp"
            android:textSize="20dp"
            android:textColor="#333333"
            android:id="@+id/tv_content_itemView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SpUsage"/>
</android.support.constraint.ConstraintLayout>